# tsclient

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  com.tsclient.TSClient.yml  com.tsclient.app.json  com.tsclient.app.yml  config.h  config.h.in  config.status  configure  configure.ac  tsclient.1  tsclient.applications  tsclient.desktop  tsclient.desktop.in  tsclient.keys  tsclient.mime  tsclient.spec
.github/workflows/: build-packages.yml
applet/: GNOME_TSClientApplet.server.in.in  Makefile.am  Makefile.in  applet.c  applet.h
applet/cinnamon-tsclient/: README.md  applet.js  metadata.json
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
debian/: README.Debian  changelog  control  copyright  rules
po/: .intltool-merge-cache  ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  ar.gmo  ar.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  gr.gmo  gr.po  he.gmo  he.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  mk.gmo  mk.po  ms.gmo  (+27 more)
src/: Makefile  Makefile.am  Makefile.in  connect.c  connect.h  gtkcompat.h  main.c  main.h  mrulist.c  mrulist.h  rdpfile.c  rdpfile.h  support.c  support.h  tsc-presets.h  tsclient
src/.deps/: connect.Po  main.Po  mrulist.Po  rdpfile.Po  support.Po
